--- a/src/components/layout/navigation/Footer/Footer.scss
+++ b/src/components/layout/navigation/Footer/Footer.scss
@@ -10,14 +10,12 @@
     height: 100px;
     display: flex;
     align-items: center;
-    
-        
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 
-    // .img-grid{
-    //     width: 100%;
-    //     display: flex;
-    //     position: absolute;
-    // }
+
 
     .redes {
         width: 80%;
